--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,60 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Practice</title>
 	<!-- css -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="http://fonts.cdnfonts.com/css/mulish" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 	<link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
-	<h1>This is the body</h1>
 
+	<div class="wrapper">
+		<div class="sidebar">
+			<h6>Dashboard Kit</h6>
+
+			<ul>
+				<li> <span></span> <a href="#"><i class=" fas fa fa-window-restore"></i><span>Home</span></a></li>
+				<li><a href="#"><i class="fa fas fa-user"></i>Profile</a></li>
+				<li><a href="#"><i class="fas fa  fa-address-card"></i>About</a></li>
+				<li><a href="#"><i class="fas fa fa-project-diagram"></i>portfolio</a></li>
+				<li><a href="#"><i class="fas fa fa-search"></i>Blogs</a></li>
+				<li><a href="#"><i class="fas fa fa-address-book"></i>Contact</a></li>
+				<li><a href="#"><i class="fas fa fa-bell"></i>Map</a></li>
+			</ul>
+
+		</div>
+		<div class="main_content">
+			<div class="header">
+				<div>
+					Overview
+				</div>
+				<div class="search">
+					<div>
+						<i class="fa fas fa-search"></i>
+						<li><i class="fa fas fa-search"></i></li>
+						<li><a href="#"><i class="fa fa-bell"></i>Blogs</a></li>
+						<li><a href="#"><i class="fas fa-address-book"></i>Contact</a></li>
+						<li><a href="#"><i class="fas fa-map-pin"></i>Map</a></li>
+					</div>
+				</div>
+
+
+
+			</div>
+			<div class="test">
+
+				<h1>
+					jjjjj
+
+				</h1>
+			</div>
+
+
+		</div>
+	</div>
+	</div>
 
 	<!-- Script -->
 	<script src="./js/main.js"></script>
